<resources>
    <string name="app_name">Green Market</string>
    <string name="title_home">Home</string>
    <string name="favourite">Favorite</string>
    <string name="post">Post</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_fragment_home">FragmentHome</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_view_demand">Demands</string>
    <string name="title_activity_post_demand">PostDemandActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_message">MessageActivity</string>
</resources>
