<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favourite" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/post" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_textsms_black_24dp"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>
